# multiturn-jailbreak

./: .gitignore  README.md  environment_gpu.yml  pyproject.toml
data/prompts/: debug_data.jsonl  multi_turn.jsonl  single_turn.jsonl  task_list.json
runs/day1/: logs.csv  logs.jsonl
src/: config.py  finetune.py  runner.py  test.py
